# mp2-2025-lab4-polinoms

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-format.yml
include/: polinom.h
src/: main.cpp  polinom.cpp
test/: CMakeLists.txt  test_main.cpp
